# kwin-rounded-screen-corners

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ScreenCornersEffect.cpp  ScreenCornersEffect.h  metadata.json  plugin.cpp
